ocfl-java-core/src/test/resources/validation/version/content-file-missing-when-duplicate-different-versions/inventory.json.sha512
ca950313f2428b819462918221ae38f0b7fcadb2447b9964cdf264258c409c93da8207fe5c7c09d0f5a2811cca994f9c04a4cef2261aa8ae43446ef108b3c176	inventory.json