ocfl-java-core/src/test/resources/invalid-repos/bad-logical-paths/o2/v3/inventory.json.sha512
3cd67cb81173f05ba5da4cb0daefb8196bfa4ae9e7d92e0b8e3854d4640d8404ed693c67c04960b0af9bca14233319c445b128de73a95d751e18815b6892e929	inventory.json